deploy/examples/toolbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rook-ceph-tools
  namespace: rook-ceph # namespace:cluster
  labels:
    app: rook-ceph-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rook-ceph-tools
  template:
    metadata:
      labels:
        app: rook-ceph-tools
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: rook-ceph-tools
          image: rook/ceph:v1.8.5
          command: ["/bin/bash"]
          args: ["-m", "-c", "/usr/local/bin/toolbox.sh"]
          imagePullPolicy: IfNotPresent
          tty: true
          securityContext:
            privileged: true
            runAsNonRoot: false
            runAsUser: 0
            runAsGroup: 0
          volumeMounts:
            - mountPath: /var/lib/rook
              name: rook-data
            - mountPath: /var/log/ceph
              name: rook-ceph-log
            - mountPath: /var/lib/ceph/crash
              name: rook-ceph-crash
            - mountPath: /dev
              name: devices
            - mountPath: /run/udev
              name: udev
            - mountPath: /rook
              name: rook-binaries
            - mountPath: /rootfs
              name: rootfs
              readOnly: true
            - mountPath: /etc/ceph
              name: ceph-config
            - name: mon-endpoint-volume
              mountPath: /etc/rook
      volumes:
        - name: mon-endpoint-volume
          configMap:
            name: rook-ceph-mon-endpoints
            items:
              - key: data
                path: mon-endpoints
        - name: ceph-config
          emptyDir: {}
        - hostPath:
            path: /var/lib/rook
            type: ""
          name: rook-data
        - emptyDir: {}
          name: ceph-conf-emptydir
        - hostPath:
            path: /var/lib/rook/rook-ceph/log
            type: ""
          name: rook-ceph-log
        - hostPath:
            path: /var/lib/rook/rook-ceph/crash
            type: ""
          name: rook-ceph-crash
        - emptyDir: {}
          name: rook-binaries
        - hostPath:
            path: /dev
            type: ""
          name: devices
        - hostPath:
            path: /run/udev
            type: ""
          name: udev
        - hostPath:
            path: /
            type: ""
          name: rootfs
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 5
