deploy/examples/metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-mgr-metrics-external-http
  namespace: rook-ceph # namespace:cluster
  labels:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph # namespace:cluster
spec:
  ports:
    - name: ceph-mgr-metric
      port: 9283
      protocol: TCP
      targetPort: 9283
      nodePort: 80 # 指定 nodePort
  selector:
    app: rook-ceph-mgr
    rook_cluster: rook-ceph
  sessionAffinity: None
  type: NodePort
