deploy/examples/object-openshift.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rook-ceph-rgw-my-store # We recommend name to be the same as the service name below, but it is not required
  namespace: rook-ceph # namespace:cluster
spec:
  port:
    targetPort: http
  # if TLS is enabled, remove the above http port and uncomment the https port and tls settings
  #  port:
  #    targetPort: https
  #  tls:
  #    insecureEdgeTerminationPolicy: Redirect
  #    termination: reencrypt
  to:
    kind: Service
    name: rook-ceph-rgw-my-store # The name of the RGW service is in the form 'rook-ceph-rgw-<objectstore-name>'
